--- a/avaliappgti/src/main/resources/application.properties
+++ b/avaliappgti/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=avaliappgti
+# ┌───────────────────────────┐
+# |   LOCAL DATA RESOURCES    |
+# └───────────────────────────┘
+
+# DATABASE CONNECTION SETTINGS
+spring.datasource.url=jdbc:postgresql://localhost:5432/avliappgtilocal
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
+
+# JPA / HIBERNATE SETTINGS
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
