--- a/avaliappgti/src/main/resources/application.properties
+++ b/avaliappgti/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.application.name=avaliappgti
 # └───────────────────────────┘
 
 # DATABASE CONNECTION SETTINGS
-spring.datasource.url=jdbc:postgresql://localhost:5432/avaliappgtilocal
+spring.datasource.url=jdbc:postgresql://db:5432/avaliappgtilocal
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
