--- a/avaliappgti/src/main/resources/application.properties
+++ b/avaliappgti/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.application.name=avaliappgti
 # DATABASE CONNECTION SETTINGS
 spring.datasource.url=jdbc:postgresql://localhost:5432/avaliappgtilocal
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=vila@123
 spring.jpa.database-platform = org.hibernate.dialect.PostgreSQLDialect
 
 # JPA / HIBERNATE SETTINGS
