--- a/avaliappgti/src/main/resources/application.properties
+++ b/avaliappgti/src/main/resources/application.properties
@@ -4,9 +4,9 @@ spring.application.name=avaliappgti
 # └───────────────────────────┘
 
 # DATABASE CONNECTION SETTINGS
-spring.datasource.url=jdbc:postgresql://localhost:5432/avaliappgtilocal
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+sspring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 
 # JPA / HIBERNATE SETTINGS
